Fixed Silly Log Overflow

--- a/css/style.css
+++ b/css/style.css
@@ -571,6 +571,7 @@ pre {
   max-height: 40em;
   background-color: var(--color-med);
   box-shadow: 0 0 5px 5px var(--color-dark) inset;
+  overflow: clip;
 }
 
 #resource-numen {
